Add some href link links

--- a/Google Advanced Search.html
+++ b/Google Advanced Search.html
@@ -56,6 +56,6 @@
         <p id="to4"> Put a minus sign just before words that you don't want: -rodent, -"Jack Russell" </p>
 
         <div class="topright">
-            <a href="Google Search.html">Google Search</a>
+            <a href="index.html">Google Search</a>
     </body>
 </html>
