--- a/Google Image Search.html
+++ b/Google Image Search.html
@@ -22,6 +22,6 @@
         </form>
 
         <div class="topright">
-            <a href="Google Search.html">Google Search</a>
+            <a href="index.html">Google Search</a>
     </body>
 </html>
