Add new image file

--- a/Google Image Search.html
+++ b/Google Image Search.html
@@ -8,8 +8,8 @@
     </head>
 
     <body>
-        <div class="logo">
-            <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+        <div class="logo1">
+            <img alt="Google" src="https://i.imgur.com/bxO22iG.png">
         </div>
 
         <form class="center" action="https://google.com/search">
