Add some href links

--- a/Google Image Search.html
+++ b/Google Image Search.html
@@ -9,7 +9,9 @@
 
     <body>
         <div class="logo1">
+            <a href="#">
             <img alt="Google" src="https://i.imgur.com/bxO22iG.png">
+            </a>
         </div>
 
         <form class="center" action="https://google.com/search">
