--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     
     <body>
         <div class="logo">
+            <a href="#">
             <img alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+            </a>
           </div>
 
         <form class="center" action="https://google.com/search">
